# equiflow

./: .gitignore  README.md  dev.ipynb  equiflow.ipynb  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  usage.rst
equiflow/: __init__.py  equiflow.py
imgs/: flow_diagram
